# cmake-rampup

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci-build-and-publish.yml
include/: common_utils.h
lib/: CMakeLists.txt  common_utils.c  math_utils.c
src/: CMakeLists.txt  common.c  common.h  main.c
tests/: CMakeLists.txt  test_add.c  test_main.c  test_subtract.c
